--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
@@ -12,6 +12,10 @@
     var valores7Dias = ViewBag.ValorEthereum7Dias;
     var valores = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(valores7Dias));
 
+    var dias30List = ViewBag.UltimoMes;
+    var dias30 = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(dias30List));
+    var valores30Dias = ViewBag.ValorMes;
+    var valores30 = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(valores30Dias));
 
     var bitcoinInvestimento = Convert.ToDouble(ViewBag.ValorInvestidoBitcoin);
     var bitcoinCashInvestimento = Convert.ToDouble(ViewBag.ValorInvestidoBitcoinCash);
@@ -27,71 +31,115 @@
 
     var lucroOuPerdaAdm = Convert.ToDouble(ViewBag.LucroOuPerdaAdm);
 }
-    @if (!User.IsInRole("Admin"))
+@if (!User.IsInRole("Admin"))
+{
+    <div class="flex-row">
+
+        <a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
+        @if (bitcoinInvestimento > 0)
+        {
+            <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
+        }
+        @if (ethereumInvestimento > 0)
+        {
+            <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
+        }
+        @if (bitcoinCashInvestimento > 0)
+        {
+            <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
+        }
+        @if (xrpInvestimento > 0)
+        {
+            <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
+        }
+        @if (paxGoldInvestimento > 0)
+        {
+            <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
+        }
+        @if (litecoinInvestimento > 0)
+        {
+            <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
+        }
+    </div>
+    <br />
+    <h1 class="text-center">@ViewData["Title"]</h1>
+    <br />
+    <hr />
+
+    <h5>Quantidade: @ethereumQuantidade</h5>
+    <h5>Valor Investido: R$ @ethereumInvestimento</h5>
+    <h5>Valor Atual: R$ @ethereumValorReal</h5>
+
+    @if (lucroOuPerda > 0)
     {
-        <div class="flex-row">
-
-            <a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
-            @if (bitcoinInvestimento > 0)
-            {
-                <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
-            }
-            @if (ethereumInvestimento > 0)
-            {
-                <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
-            }
-            @if (bitcoinCashInvestimento > 0)
-            {
-                <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
-            }
-            @if (xrpInvestimento > 0)
-            {
-                <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
-            }
-            @if (paxGoldInvestimento > 0)
-            {
-                <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
-            }
-            @if (litecoinInvestimento > 0)
-            {
-                <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
-            }
-        </div>
-        <br />
-        <h1 class="text-center">@ViewData["Title"]</h1>
-        <br />
-        <hr />
-
-        <h5>Quantidade: @ethereumQuantidade</h5>
-        <h5>Valor Investido: R$ @ethereumInvestimento</h5>
-        <h5>Valor Atual: R$ @ethereumValorReal</h5>
-
-        @if (lucroOuPerda > 0)
+        <h5>Lucro: R$ @lucroOuPerda</h5>
+    }
+    else
+    {
+        if (lucroOuPerda < 0)
         {
-            <h5>Lucro: R$ @lucroOuPerda</h5>
+            lucroOuPerda = lucroOuPerda * (-1);
         }
-        else
-        {
-            if (lucroOuPerda < 0)
-            {
-                lucroOuPerda = lucroOuPerda * (-1);
-            }
-            <h5>Perda: R$ @lucroOuPerda</h5>
-        }
+        <h5>Perda: R$ @lucroOuPerda</h5>
+    }
 
-        <br />
+    <div id="botaoMes">
+        <button type="button" class="btn btn-light" onclick="TrocarGrafico()">Mensal</button>
+    </div>
+    <div id="botaoSemana">
+        <button type="button" class="btn btn-light" onclick="TrocarGraficoSemana()">Semanal</button>
+    </div>
 
+    <br />
+
+    <div id="graficoSemana">
         <canvas id="graficoEthereum" width="400" height="150">
         </canvas>
+    </div>
+    <div id="graficoMes">
+        <canvas id="graficoEthereum30" width="400" height="150">
+        </canvas>
+    </div>
 
-        @section Scripts {
-            <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-            <script>
+        <script>
         $(document)
             .ready(function () {
 
                 var ctx = document.getElementById('graficoEthereum').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: @dias30,
+                        datasets: [{
+                            data: @valores30,
+                            backgroundColor: 'rgba(107, 108, 109, 0.0)',
+                            borderColor:  'rgba(107, 108, 109, 1)',
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        legend: {
+                            display: false
+                        },
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: false
+                                }
+                            }]
+                        }
+                    }
+                });
+
+            });
+
+                $(document)
+            .ready(function () {
+
+                var ctx = document.getElementById('graficoEthereum30').getContext('2d');
                 var myChart = new Chart(ctx, {
                     type: 'line',
                     data: {
@@ -118,48 +166,48 @@
                 });
 
             });
-            </script>
 
-        }
+        </script>
+    }
+}
+else
+{
+    <div class="flex-row">
+        <a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
+        <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
+        <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
+        <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
+        <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
+        <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
+        <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
+    </div>
+    <br />
+    <h1 class="text-center">@ViewData["Title"]</h1>
+    <br />
+    <h5>Quantidade: @admEthereumTotal</h5>
+    <h5>Valor Investido: R$ @EthereumInvestido</h5>
+    <h5>Valor Atual: R$ @EthereumValorRS</h5>
+    @if (lucroOuPerdaAdm > 0)
+    {
+        <h5>Lucro: R$ @lucroOuPerdaAdm</h5>
     }
     else
     {
-        <div class="flex-row">
-            <a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
-            <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
-            <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
-            <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
-            <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
-            <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
-            <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
-        </div>
-        <br />
-        <h1 class="text-center">@ViewData["Title"]</h1>
-        <br />
-        <h5>Quantidade: @admEthereumTotal</h5>
-        <h5>Valor Investido: R$ @EthereumInvestido</h5>
-        <h5>Valor Atual: R$ @EthereumValorRS</h5>
-        @if (lucroOuPerdaAdm > 0)
+        if (lucroOuPerdaAdm < 0)
         {
-            <h5>Lucro: R$ @lucroOuPerdaAdm</h5>
+            lucroOuPerdaAdm = lucroOuPerdaAdm * (-1);
         }
-        else
-        {
-            if (lucroOuPerdaAdm < 0)
-            {
-                lucroOuPerdaAdm = lucroOuPerdaAdm * (-1);
-            }
-            <h5>Perda: R$ @lucroOuPerdaAdm</h5>
-        }
-        <br />
+        <h5>Perda: R$ @lucroOuPerdaAdm</h5>
+    }
+    <br />
 
-        <canvas id="graficoEhtereum" width="400" height="150">
-        </canvas>
+    <canvas id="graficoEhtereum" width="400" height="150">
+    </canvas>
 
-        @section Scripts {
-            <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-            <script>
+        <script>
         $(document)
             .ready(function () {
 
@@ -190,6 +238,6 @@
                 });
 
             });
-            </script>
-        }
+        </script>
     }
+}
