--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Bitcoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Bitcoin.cshtml
@@ -30,6 +30,11 @@
     var BitcoinValorRS = ViewBag.BitcoinValorRS;
     var BitcoinInvestido = ViewBag.BitcoinInvestido;
 
+    var bitcoinTotalAdmMes = ViewBag.ValorBitcoinMesAdm;
+    var bitcoinTotalAdm30 = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(bitcoinTotalAdmMes));
+    var dias30ListAdm = ViewBag.UltimoMesAdm;
+    var diasAdm30 = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(dias30ListAdm));
+
     var lucroOuPerdaAdm = Convert.ToDouble(ViewBag.LucroOuPerdaAdm);
 }
 
@@ -202,11 +207,23 @@ else
         <h5>Perda: R$ @lucroOuPerdaAdm</h5>
     }
 
+    <div id="botaoMes">
+        <button type="button" class="btn btn-light" onclick="TrocarGrafico()">Mensal</button>
+    </div>
+    <div id="botaoSemana">
+        <button type="button" class="btn btn-light" onclick="TrocarGraficoSemana()">Semanal</button>
+    </div>
 
     <br />
 
-    <canvas id="graficoBitcoin" width="400" height="150">
-    </canvas>
+    <div id="graficoSemana">
+        <canvas id="graficoBitcoin" width="400" height="150">
+        </canvas>
+    </div>
+    <div id="graficoMes">
+        <canvas id="graficoBitcoin30" width="400" height="150">
+        </canvas>
+    </div>
 
     @section Scripts {
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
@@ -222,6 +239,37 @@ else
                         labels: @dias,
                         datasets: [{
                             data: @bitcoinTotalAdm,
+                            backgroundColor: 'rgba(250, 150, 26, 0.0)',
+                            borderColor: 'rgba(250, 150, 26, 1)',
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        legend: {
+                            display: false
+                        },
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: false
+                                }
+                            }]
+                        }
+                    }
+                });
+
+            });
+
+              $(document)
+            .ready(function () {
+
+                var ctx = document.getElementById('graficoBitcoin30').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: @diasAdm30,
+                        datasets: [{
+                            data: @bitcoinTotalAdm30,
                             backgroundColor: 'rgba(250, 150, 26, 0.0)',
                             borderColor: 'rgba(250, 150, 26, 1)',
                             borderWidth: 1
