--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
@@ -29,6 +29,11 @@
     var EthereumValorRS = ViewBag.EthereumValorRS;
     var EthereumInvestido = ViewBag.EthereumInvestido;
 
+    var TotalAdmMes = ViewBag.ValorMesAdm;
+    var TotalAdm30 = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(TotalAdmMes));
+    var dias30ListAdm = ViewBag.UltimoMesAdm;
+    var diasAdm30 = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(dias30ListAdm));
+
     var lucroOuPerdaAdm = Convert.ToDouble(ViewBag.LucroOuPerdaAdm);
 }
 @if (!User.IsInRole("Admin"))
@@ -199,10 +204,26 @@ else
         }
         <h5>Perda: R$ @lucroOuPerdaAdm</h5>
     }
+
+    <div id="botaoMes">
+        <button type="button" class="btn btn-light" onclick="TrocarGrafico()">Mensal</button>
+    </div>
+    <div id="botaoSemana">
+        <button type="button" class="btn btn-light" onclick="TrocarGraficoSemana()">Semanal</button>
+    </div>
+
     <br />
 
-    <canvas id="graficoEhtereum" width="400" height="150">
-    </canvas>
+    <div id="graficoSemana">
+        <canvas id="graficoEhtereum" width="400" height="150">
+        </canvas>
+    </div>
+    <div id="graficoMes">
+        <canvas id="graficoEhtereum30" width="400" height="150">
+        </canvas>
+    </div>
+    <br />
+
 
     @section Scripts {
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
@@ -218,6 +239,37 @@ else
                         labels: @dias,
                         datasets: [{
                             data: @ethereumTotalAdm,
+                            backgroundColor:  'rgba(107, 108, 109, 0.0)',
+                            borderColor:  'rgba(107, 108, 109, 1)',
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        legend: {
+                            display: false
+                        },
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: false
+                                }
+                            }]
+                        }
+                    }
+                });
+
+            });
+
+              $(document)
+            .ready(function () {
+
+                var ctx = document.getElementById('graficoEhtereum30').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: @diasAdm30,
+                        datasets: [{
+                            data: @TotalAdm30,
                             backgroundColor:  'rgba(107, 108, 109, 0.0)',
                             borderColor:  'rgba(107, 108, 109, 1)',
                             borderWidth: 1
