--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Litecoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Litecoin.cshtml
@@ -29,6 +29,11 @@
     var LitecoinValorRS = ViewBag.LitecoinValorRS;
     var LitecoinInvestido = ViewBag.LitecoinInvestido;
 
+    var TotalAdmMes = ViewBag.ValorMesAdm;
+    var TotalAdm30 = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(TotalAdmMes));
+    var dias30ListAdm = ViewBag.UltimoMesAdm;
+    var diasAdm30 = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(dias30ListAdm));
+
     var lucroOuPerdaAdm = Convert.ToDouble(ViewBag.LucroOuPerdaAdm);
 }
 
@@ -201,8 +206,23 @@ else
     }
     <br />
 
-    <canvas id="graficoLitecoin" width="400" height="150">
-    </canvas>
+    <div id="botaoMes">
+        <button type="button" class="btn btn-light" onclick="TrocarGrafico()">Mensal</button>
+    </div>
+    <div id="botaoSemana">
+        <button type="button" class="btn btn-light" onclick="TrocarGraficoSemana()">Semanal</button>
+    </div>
+
+    <br />
+
+    <div id="graficoSemana">
+        <canvas id="graficoLitecoin" width="400" height="150">
+        </canvas>
+    </div>
+    <div id="graficoMes">
+        <canvas id="graficoLitecoin30" width="400" height="150">
+        </canvas>
+    </div>
 
     @section Scripts {
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
@@ -218,6 +238,37 @@ else
                         labels: @dias,
                         datasets: [{
                             data: @litecoinTotalAdm,
+                            backgroundColor:  'rgba(250, 244, 15, 0.0)',
+                            borderColor:  'rgba(250, 244, 15, 1)',
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        legend: {
+                            display: false
+                        },
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: false
+                                }
+                            }]
+                        }
+                    }
+                });
+
+            });
+
+             $(document)
+            .ready(function () {
+
+                var ctx = document.getElementById('graficoLitecoin30').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: @diasAdm30,
+                        datasets: [{
+                            data: @TotalAdm30,
                             backgroundColor:  'rgba(250, 244, 15, 0.0)',
                             borderColor:  'rgba(250, 244, 15, 1)',
                             borderWidth: 1
