--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -60,6 +60,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
+                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
                         }
                     </td>
                 </tr>
