--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
@@ -50,7 +50,7 @@
                     <td>
                         R$ @Html.DisplayFor(modelItem => item.Valor)
                     </td>
-                    <td>
+                    <td style="white-space: nowrap">
                         @if (User.IsInRole("Admin"))
                         {
                             <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
