--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Details.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Details.cshtml
@@ -36,6 +36,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    @if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> 
+}
     <a asp-action="Index">Voltar</a>
 </div>
