Adicionando nova lista de itens para simulação - caso alterasse uma criptomoeda na lista de venda/compra, também era alterada na outra. Tratamento de exceção caso o valor inserido não seja numérico

--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
@@ -63,10 +63,9 @@
                 </th>
                 @if (User.IsInRole("Admin"))
                 {
-                    <th>
-                        @Html.ActionLink("Saldo", "Index", new { sortOrder = ViewBag.ValueSortParm }, new { @class = "imgOrder" })
-
-                    </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SaldoAtualRS)
+            </th>
                 }
                 else
                 {
