--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Simulacao.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Simulacao.cshtml
@@ -52,7 +52,7 @@
             </p>
             <br />
             <h4>Total</h4>
-            <h5 id="total">@totalVenda</h5>
+            <h5>@totalVenda</h5>
             <br />
         </form>
     </div>
