alterando rotas e atualizando controllers na parte escrita do projeto

--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
@@ -13,7 +13,7 @@
         <p>
             @Html.DropDownList("Busca", null, new
             {
-           onchange = "document.location.href='/ContasClientes/Aplicacoes?Busca='+this.value;"
+           onchange = "document.location.href='/aplicacoes?Busca='+this.value;"
             })
 
             <input type="text" name="SearchString">
