--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Simulacao.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Simulacao.cshtml
@@ -16,7 +16,7 @@
                 Criptomoeda
                 @Html.DropDownList("Busca", null, new
            {
-               onchange = "document.location.href='/CriptomoedasHoje/Simulacao?Busca='+this.value;"
+               onchange = "document.location.href='/Simulacao?Busca='+this.value;"
            })
             </p>
             <p>
@@ -40,7 +40,7 @@
                 Criptomoeda
                 @Html.DropDownList("BuscaVenda", null, new
            {
-               onchange = "document.location.href='/CriptomoedasHoje/Simulacao?BuscaVenda='+this.value;"
+               onchange = "document.location.href='/Simulacao?BuscaVenda='+this.value;"
            })
             </p>
             <p>
