--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
@@ -13,7 +13,7 @@
         <p>
             @Html.DropDownList("Busca", null, new
             {
-           onchange = "document.location.href='/Transacoes/Index?Busca='+this.value;"
+           onchange = "document.location.href='/transacoes/Index?Busca='+this.value;"
             })
 
             <input type="text" name="SearchString">
